# tickerLens

./: .editorconfig  .gitignore  Makefile  README.md  tasks.md
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_ingestion_tables.py  0002_create_parsing_tables.py  0003_create_chunking_tables.py  0004_create_embedding_tables.py  0005_create_indexing_tables.py  0006_create_universe_and_auto_ingestion_tables.py  0007_create_auth_conversations_observability_tables.py  0008_add_conversation_tickers.py
apps/api/src/tickerlens_api/: main.py  settings.py
apps/api/src/tickerlens_api/agent/: __init__.py  controller.py  heuristics.py  schemas.py
apps/api/src/tickerlens_api/api/routes/: auth.py  chat.py  chunking.py  conversations.py  documents.py  embeddings.py  health.py  indexing.py  ingestion.py  parsing.py  pipeline.py  search.py  tickers.py  version.py
apps/api/src/tickerlens_api/audit/: service.py
apps/api/src/tickerlens_api/auth/: dependencies.py  schemas.py  security.py  service.py
apps/api/src/tickerlens_api/chat/: citations.py  prompting.py  schemas.py
apps/api/src/tickerlens_api/chunking/: schemas.py  service.py  text.py
apps/api/src/tickerlens_api/context/: assembler.py
apps/api/src/tickerlens_api/conversations/: schemas.py  service.py
apps/api/src/tickerlens_api/db/: models.py  session.py
apps/api/src/tickerlens_api/documents/: schemas.py  service.py
apps/api/src/tickerlens_api/embeddings/: openai_embedder.py  schemas.py  service.py
apps/api/src/tickerlens_api/indexing/: schemas.py  service.py
apps/api/src/tickerlens_api/ingestion/: discovery.py  download.py  nifty50.py  nse_client.py  runner.py  scheduler.py  universe_service.py
apps/api/src/tickerlens_api/keywordstore/: opensearch_store.py
apps/api/src/tickerlens_api/observability/: metrics.py  middleware.py  otel.py  rag_metrics.py  tracing.py
apps/api/src/tickerlens_api/parsing/: pdf.py  schemas.py  service.py
apps/api/src/tickerlens_api/pipeline/: schemas.py  service.py
apps/api/src/tickerlens_api/reranking/: fastembed_reranker.py  openai_reranker.py  service.py  types.py
apps/api/src/tickerlens_api/search/: schemas.py
apps/api/src/tickerlens_api/security/: limits.py  rate_limit.py  request_actor.py
apps/api/src/tickerlens_api/storage/: s3.py
apps/api/src/tickerlens_api/temporal/: intent.py  scope.py
apps/api/src/tickerlens_api/tools/: __init__.py  yahoo_finance.py
apps/api/src/tickerlens_api/utils/: files.py
apps/api/src/tickerlens_api/vectorstore/: qdrant_store.py
apps/api/tests/: test_agent_heuristics.py  test_documents_service.py  test_system_endpoints.py
apps/web/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth-disabled/: page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: ChatApp.tsx  ChatComposer.tsx  ChatSessions.tsx  ChatThread.tsx  CitationsDrawer.tsx  TickerPicker.tsx  TimelineApp.tsx
apps/web/lib/: apiProxy.ts  nifty50.ts  serverAuth.ts  sse.ts  storage.ts  types.ts
docs/adr/: 0001-record-architecture-decisions.md  0002-initial-repo-and-local-dev-stack.md  README.md
infra/compose/: .env.example  docker-compose.yml
infra/compose/otel/: collector.yaml
infra/compose/prometheus/: prometheus.yml
infra/compose/tempo/: tempo.yaml
scripts/: dev.ps1
services/indexing/: README.md
services/ingestion/: README.md
(+20 files in other folders)
