[project]
name = "tickerlens-api"
version = "0.1.0"
description = "TickerLens API (FastAPI) — stock intelligence RAG platform backend."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "alembic>=1.13,<2.0",
  "boto3>=1.34,<2.0",
  "pymupdf>=1.24,<2.0",
  "pytesseract>=0.3.10,<1.0",
  "pillow>=10.0,<12.0",
  "uvicorn[standard]>=0.27,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
